# MVP

./: .gitignore  AGENT.md  IDEA.md  PLANNING.md  README.md  SKILL.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  usage.md  vitest.config.ts
docs/: MANUAL.en.md  MANUAL.th.md  agent-usage-playbook-v0.1.md  aws-spike-v0.1.md  cloud-provider-setup-v0.1.en.md  cloud-provider-setup-v0.1.th.md  mcp-audit-retention-policy-v0.1.md  mcp-aws-hosted-profile-v0.1.md  mcp-hardening-report-v0.1.md  mcp-load-matrix-hosted-compare-v0.1.md  mcp-load-matrix-hosted-pipeline-v0.1.md  mcp-load-matrix-hosted-preflight-v0.1.md  mcp-load-matrix-hosted-staging-v0.1.md  mcp-load-matrix-v0.1.md  mcp-read-tools-contract-v0.1.md  p3-2-mobile-beta-core-readiness-v0.1.md  p3-2a-ios-native-swift-design-v0.1.md  p3-6-execution-backlog-v0.1.md  sync-backend-api-examples-v0.1.md  sync-deep-dive-v0.1.en.md  sync-deep-dive-v0.1.th.md  sync-provider-secure-store-validation-v0.1.md  telemetry-spec-v0.1.md
e2e/: conflict-resolve-matrix.spec.ts  conflict-resolve-transport.spec.ts  conflict-retry-resolve.spec.ts  migration-sync-guard.spec.ts  restore-recovery.spec.ts  sync-diagnostics-history-export.spec.ts  sync-retry-failure.spec.ts  sync-runtime-profile.spec.ts  workspace-navigation.spec.ts
mcp-solostack/: README.md  app.mjs  app.test.ts  audit-sink.mjs  audit-sink.test.ts  config.mjs  config.test.ts  logger.mjs  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
(+125 files in other folders)
